--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "watch": "cross-env tsc --watch",
     "test": "cross-env jest",
     "seed": "cross-env medusa seed -f ./data/seed.json",
-    "start": "cross-env npm run build && medusa start",
+    "start": "cross-env npm run build && medusa start -p 9002",
     "start:custom": "cross-env npm run build && node --preserve-symlinks index.js",
-    "dev": "cross-env npm run build && medusa develop",
+    "dev": "cross-env npm run build && medusa develop -p 9002",
     "build:admin": "cross-env medusa-admin build"
   },
   "dependencies": {
@@ -41,9 +41,9 @@
     "typeorm": "^0.3.16"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.21.4",
     "@babel/cli": "^7.14.3",
     "@babel/core": "^7.14.3",
+    "@babel/preset-typescript": "^7.21.4",
     "@medusajs/medusa-cli": "^1.3.14",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
