--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "cross-env npm run clean && tsc -p tsconfig.json",
     "watch": "cross-env tsc --watch",
     "test": "cross-env jest",
-    "seed": "cross-env medusa seed -f ~/data/seed.json",
+    "seed": "cross-env medusa seed -f ./data/seed.json",
     "start": "cross-env npm run build && medusa start -p 9002",
     "start:custom": "cross-env npm run build && node --preserve-symlinks index.js",
     "dev": "cross-env npm run build && npm run seed && medusa develop -p 9002",
