--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test": "cross-env jest",
     "seed": "cross-env medusa seed -f ./data/seed.json",
     "start": "cross-env npm run build && medusa start -p 9002",
+    "start:migrate": "cross-env npm run build && medusa migrations run && medusa start -p 9002",
     "start:custom": "cross-env npm run build && node --preserve-symlinks index.js",
     "dev": "cross-env npm run build && npm run seed && medusa develop -p 9002",
     "build:admin": "cross-env medusa-admin build"
